sandbox/output
ProfitDeduplicate.java:17: error: incompatible types: invalid method reference
                ProfitDeduplicate::calculateProfit);
                ^
    method calculateProfit in class ProfitDeduplicate cannot be applied to given types
      required: Double,Double
      found: no arguments
      reason: actual and formal argument lists differ in length
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
